--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,3 +1,13 @@
+---
+import type { PropsWithChildren } from "react";
+
+interface BaseLayoutProps extends PropsWithChildren {
+  title: string;
+}
+
+const { title } = Astro.props;
+---
+
 <!doctype html>
 <html lang="en">
   <head>
