--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,6 @@
 ---
 import type { PropsWithChildren } from "react";
+import "../styles/global.css";
 
 interface BaseLayoutProps extends PropsWithChildren {
   title: string;
